[package]
name = "freebsd-geom"
version = "0.1.0"
authors = ["Conrad Meyer <cem@FreeBSD.org>"]
edition = "2018"

[profile.dev]
opt-level = 2

[dependencies]
serde = { version = "~1.0.0", features = [ "derive" ] }
serde-hex = "~0.1.0"
sysctl = "~0.4.0"
quick-xml = { version = "~0.20.0", features = [ "serialize" ] }
