[package]
name = "freebsd-geom"
description = "A library for working with GEOM object graphs"
version = "0.1.1"
authors = ["Conrad Meyer <cem@FreeBSD.org>"]
license = "MIT"
categories = ["config", "database", "os::freebsd-apis", "parser-implementations"]
keywords = ["freebsd", "geom", "graph", "api"]
repository = "https://github.com/cemeyer/freebsd-geom-rs"
edition = "2018"

[profile.dev]
opt-level = 2

[dependencies]
scan_fmt = "~0.2.5"
serde = { version = "~1.0.0", features = [ "derive" ] }
serde-hex = "~0.1.0"
strum = "~0.20.0"
strum_macros = "~0.20.1"
sysctl = "~0.4.0"
quick-xml = { version = "~0.20.0", features = [ "serialize" ] }

[package.metadata.docs.rs]
default-target = "x86_64-unknown-freebsd"
